[gd_scene load_steps=3 format=3 uid="uid://0lguevpvvxxn"]

[ext_resource type="Script" uid="uid://dayk5jx5sx0d5" path="res://scenes/levels/level_2_frames/framelvl2.gd" id="1_h0722"]
[ext_resource type="PackedScene" uid="uid://bkfqel5echi78" path="res://scenes/levels/level_2_frames/texturelvl2_4.tscn" id="2_ey0jc"]

[node name="Frame" type="Area2D" groups=["frames"]]
script = ExtResource("1_h0722")

[node name="TextureRect" parent="." instance=ExtResource("2_ey0jc")]
visible = false

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="correct" from="TextureRect" to="." method="_on_texture_rect_correct"]
[connection signal="not_correct" from="TextureRect" to="." method="_on_texture_rect_not_correct"]
